src/client/ui/components/shared/card/Card.module.css
.Card {
  background-color: #ffffff;
  width: 150px;
  height: 150px;
  padding: 8px;
  border-radius: 8px;
  box-shadow: rgba(60, 64, 67, 0.3) 0 1px 2px 0, rgba(60, 64, 67, 0.15) 0 2px 6px 2px;
  transition: all ease 0.2s;
}

.Card:hover {
  cursor: pointer;
  background-color: #fff1de;
  box-shadow: rgba(50, 50, 93, 0.25) 0 30px 60px -12px, rgba(0, 0, 0, 0.3) 0 18px 36px -18px;
}

